hello-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-app
  name: hello-app-5c9b7f89cc-zgs4b
  namespace: default
spec:
  containers:
  - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
    imagePullPolicy: IfNotPresent
    name: hello-app
