hello-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: hello-app
spec:
  ingressClassName: nginx
  rules:
  - host: www.demo.io
    http:
      paths:
      - backend:
          service:
            name: hello-app
            port:
              number: 8080
        path: /hello
        pathType: Prefix
